# teaching-material

./: .editorconfig  .gitignore  BUILD.adoc  CHANGELOG.md  Gemfile  README.adoc  README.md  Rakefile.rb  advanced-generics-bounds.html  async-await.html  async-building-blocks.html  async-component-interaction.html  async-growth-handling.html  basic-types.html  borrowing.html  build.sh  cargo.html  closures.html  community-map.html  compound-types.html  control-flow.html  conversion-patterns.html  crates.html  deref-coersions.html  documentation.html  drop-panic-abort.html  dynamic-and-static-libs.html  dynamic-dispatch.html  effective-rust.html  embedded.html  error-handling.html  ffi.html  functions.html  futures.html  generics-basics.html  imports-modules-and-visibility.html  index.html  inner-mutability.html  installation.html  iterators-again.html  (+34 more)
.github/workflows/: pages.yaml
assignments/: actix.adoc  async-channels.adoc  async-channels.html  async-mailbox.adoc  async-mailbox.html  binding-to-leveldb.adoc  binding-to-leveldb.html  bullsncows.adoc  calc.adoc  calc.html  connected-mailbox.adoc  connected-mailbox.html  durable-file.adoc  durable-file.html  files-match-result-assignment.adoc  files-match-result.adoc  fizzbuzz-command-line.adoc  fizzbuzz.adoc  fizzbuzz.html  fizzbuzz_cheat_sheet.adoc  green_yellow.adoc  library-client.adoc  library-client.html  multithreaded-mailbox.adoc  multithreaded-mailbox.html  narcissistic-number-check.adoc  nested-parens.adoc  photo-upload-actix.adoc  redis-protobuf.adoc  redis-protobuf.html  redis.adoc  redis.html  redisish.adoc  redisish.html  result-option-assignment.adoc  result-option-assignment.html  rustlatin.adoc  semver_from_file.adoc  semver_server.adoc  serde-lifetimes.adoc  (+18 more)
assignments/IO-assignment/: Cargo.toml
assignments/async-chat-template/: Cargo.toml
assignments/async-chat-template/src/: main.rs
assignments/files-match-result-assignment/: Cargo.toml
assignments/leveldb-mdbook/: README.md  book.toml  netlify.toml
assignments/preliminary/async_parser_codealong/: Cargo.toml
assignments/preliminary/async_parser_codealong/solution/: lib.rs  main.rs
assignments/preliminary/async_parser_codealong/src/: main.rs
assignments/preliminary/calculator/calc-ffi/: .gitignore  Cargo.toml  build.rs  build_all.sh  demo.c  ffi-notes.md  notes_james
assignments/preliminary/calculator/calc-ffi/solution/: cbindgen.toml  lib.rs
assignments/preliminary/calculator/calc-ffi/src/: lib.rs
assignments/redis-protobuf/: config.proto
assignments/solutions/actix-semver/: Cargo.toml
assignments/solutions/actix-semver/src/: main.rs
assignments/solutions/actix/chat-websockets/: Cargo.toml  Readme.md
assignments/solutions/actix/chat-websockets/src/: chat_server.rs  main.rs
assignments/solutions/redis/: Cargo.toml
assignments/solutions/redis-protobuf/: Cargo.toml  build.rs
assignments/solutions/redis-protobuf/src/: main.rs  phone.rs  phonebook.proto
assignments/solutions/redis/src/: lib.rs  main.rs
assignments/solutions/semver-client-server/semver-client-async/: Cargo.toml
assignments/solutions/semver-client-server/semver-client-async/src/: main.rs
assignments/solutions/semver-client-server/semver-server-actix/: .gitignore  Cargo.toml  websocket-client.py
assignments/solutions/semver-client-server/semver-server-actix/src/: client.rs  main.rs  shared-repo.rs  shared-server.rs  simple-server.rs
assignments/solutions/semver-client-server/semver-server-async-channels/: Cargo.toml
assignments/solutions/semver-client-server/semver-server-async-channels/src/: main.rs
course_schedules/: james_style.md
examples/ffi_use_c_in_rust/: Cargo.toml  build.rs
examples/ffi_use_rust_in_c/: Cargo.toml  Makefile  example.c  example.h
fill_in_the_blanks/: closures.adoc  enums_match.adoc  enums_match.html
presentations/: cargo.adoc  check-for-errors.sh  docinfo-footer.html  index.adoc  slides.css
presentations/advanced-generics-bounds/: 1.rs  2.rs  3.rs  4.rs  5.rs  6.rs  7.rs  8.rs  9.rs  slides.adoc
presentations/async-await/: 1.rs  2.rs  3.rs  4.rs  5.rs  slides.adoc
presentations/async-await-intro/: 3.rs  4.rs  5.rs  8.rs  9.rs  async_main_1.rs  async_main_2.rs  async_trait.rs  block_on.rs  fetch_into_string.rs  is_website_up.rs  lazy.rs  slides.adoc  task_spawn.rs
presentations/async-await-intro/example/async-await-intro/: Cargo.toml
presentations/async-await-intro/example/async-await-intro/src/: main.rs
presentations/async-await-laziness-in-detail/: futures-vs-promises.js  futures_vs_promises.rs  slides.adoc
presentations/async-building-blocks/: slides.adoc
presentations/async-component-interaction/: slides.adoc
presentations/async-growth-handling/: slides.adoc
presentations/async-implementation/: slides.adoc
presentations/async-tokio-intro/: slides.adoc
presentations/basic-types/: 1.rs  2.rs  3.rs  4.rs  5.rs  6.rs  slides.adoc
presentations/borrowing/: 1.diagram  1.rs  2.error  2.rs  3.rs  4.rs  5.rs  6.rs  7.rs  slides.adoc
presentations/cargo/: 1.toml  2.toml  3.toml  4.toml  5.toml  6.rs  7.toml  8.toml  slides.adoc
presentations/closures/: 1.rs  2.rs  3.rs  4.rs  slides.adoc
presentations/community-map/: slides.adoc
presentations/compound-types/: 4.rs  5.rs  7.rs  8.rs  slides.adoc
presentations/control-flow/: .slides.adoc.swp  1.rs  10.rs  11.rs  11a.rs  11b.rs  12.rs  2.rs  3.rs  4.rs  5.rs  6.rs  7.rs  7_5.rs  8.rs  9.rs  slides.adoc
presentations/conversion-patterns/: 2.rs  slides.adoc
presentations/crates/: 0.rs  1.rs  2.rs  3.rs  4.toml  slides.adoc
presentations/data-structures/: 1.rs  10.rs  2.rs  3.rs  6.rs  9.rs  slides.adoc
presentations/debugging-rust/: slides.adoc
presentations/deref-coersions/: 1.rs  2.rs  3.rs  slides.adoc
presentations/design-patterns/: 1.rs  2.rs  3.rs  4.rs  5.rs  6.rs  7.rs  slides.adoc
presentations/documentation/: 1.bash  2.rs  slides.adoc
presentations/drop-panic-abort/: 1.rs  2.rs  slides.adoc
presentations/dynamic-and-static-libs/: 1.rs  2.c  3.toml  4.c  5.sh  6.sh  7.rs  slides.adoc
semver-codealong/: Cargo.toml
(+494 files in other folders)
