[package]
name = "async_parser_codealong"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.17"
async-stream = "0.3.2"
rand = "0.8.4"
tokio = { version = "1.12.0", features = ["full"] }
console-subscriber = { path = "/Users/anatol.ulrich/work/tokio-console/console-subscriber"}