[package]
name = "actix-semver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
semver = { path = "../semver"}
semver_api = { path = "../semver-client-server/semver-api/"}

actix = "0.10"
actix-web = "3.3.2"
actix-web-actors = "3"
actix-files = "0.3"
actix-codec = "0.3"

rand = "0.8.4"
bytes = "0.5.3"
byteorder = "1.2"
futures = "0.3"
log = "0.4"
pretty_env_logger = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
