[package]
name = "actix-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
actix = "0.10"
actix-web = "3.3.2"
actix-web-actors = "3"
actix-files = "0.3"
actix-codec = "0.3"

rand = "0.8.4"
bytes = "0.5.3"
byteorder = "1.2"
futures = "0.3"
log = "0.4"
env_logger = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
