[package]
name = "semver-client"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
semver = {path = "../../semver"}
semver_api = {path = "../semver-api"}

log = "0.4"
pretty_env_logger = "0.4"
async-std = "1.10.0"
rand = "0.8"
anyhow = "1.0"